--- a/src/app/components/demand/table/demand.component.html
+++ b/src/app/components/demand/table/demand.component.html
@@ -1,6 +1,6 @@
 <div class="card">
   <div class="card-header">
-    <h5>Demands table</h5>
+    <button class="btn btn-primary btn-round">Add Demand</button>
     <div class="card-header-right">
       <ul class="list-unstyled card-option">
         <li><i class="fa fa-chevron-left"></i></li>
@@ -24,11 +24,16 @@
         </tr>
         </thead>
         <tbody>
-        <tr>
-          <th scope="row">1</th>
-          <td>Mark</td>
-          <td>Otto</td>
-          <td>@mdo</td>
+        <tr *ngFor="let demand of demands">
+          <th>{{ demand.id }}</th>
+          <td>{{ demand.user.username }}</td>
+          <td>{{ demand.demandedEquipments.length }}</td>
+          <td><span class="label" [ngClass]="{
+          'label-danger': demand.status == 'Rejected',
+          'label-success': demand.status == 'Approved',
+          'label-warning': demand.status == 'Pending',}">
+            {{ demand.status }}
+          </span></td>
           <td></td>
         </tr>
         </tbody>
