--- a/src/app/components/demand/table/demand.component.html
+++ b/src/app/components/demand/table/demand.component.html
@@ -1,6 +1,6 @@
 <div class="card">
   <div class="card-header">
-    <button class="btn btn-primary btn-round">Add Demand</button>
+    <a class="btn btn-primary btn-round" routerLink="/dashboard/demand-form">Add Demand</a>
     <div class="card-header-right">
       <ul class="list-unstyled card-option">
         <li><i class="fa fa-chevron-left"></i></li>
