--- a/src/app/components/equipment/equipment.component.html
+++ b/src/app/components/equipment/equipment.component.html
@@ -1,1 +1,36 @@
-<p>equipment works!</p>
+<div class="card">
+  <div class="card-header">
+    <h4>Equipments</h4>
+    <div class="card-header-right">
+      <ul class="list-unstyled card-option">
+        <li><i class="fa fa-chevron-left"></i></li>
+        <li><i class="fa fa-window-maximize full-card"></i></li>
+        <li><i class="fa fa-minus minimize-card"></i></li>
+        <li><i class="fa fa-times close-card"></i></li>
+      </ul>
+    </div>
+
+  </div>
+  <div class="card-block table-border-style">
+    <div class="table-responsive">
+      <table class="table table-hover">
+        <thead>
+        <tr>
+          <th>#</th>
+          <th>Name</th>
+          <th>Price</th>
+          <th>Type</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr *ngFor="let equipment of equipments">
+          <th>{{ equipment.id }}</th>
+          <td>{{ equipment.name }}</td>
+          <td>{{ equipment.price }}</td>
+          <td>{{ equipment.type.name }}</td>
+        </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
